manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: "*"
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"finlex-lukija:production","namespace":"ohtuprojekti-production"},"fieldPath":"spec.template.spec.containers[?(@.name==\"finlex-lukija\")].image","pause":"false"}]
  name: finlex-lukija-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: finlex-lukija
  template:
    metadata:
      labels:
        app: finlex-lukija
    spec:
      containers:
        - name: finlex-lukija
          image: finlex-lukija:production
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
